site: fix nav width on large screens (overflow)

--- a/site/static/global.css
+++ b/site/static/global.css
@@ -40,6 +40,10 @@ main {
 	box-sizing: border-box;
 }
 
+nav {
+	box-sizing: border-box;
+}
+
 ss-title {
 	font-weight: 900;
 	font-size: 2rem;
